--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,7 +1,8 @@
 import(Bessel)
 import(stats)
-import(MASS)
 import(mvtnorm)
 import(ghyp)
 import(numDeriv)
-export(MCGHD, MGHD, MGHFA)
+import(MASS)
+import(mclust)
+export(MCGHD, MGHD, MGHFA, MSGHD,cMSGHD, DA, Selection)
