--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,16 @@
 Package: MixGHD
 Type: Package
-Title: Model based clustering, classification and discriminant analysis
-        using the mixture of generalized hyperbolic distributions.
-Version: 1.1
-Date: 2014-09-19
+Title: Model Based Clustering, Classification and Discriminant Analysis
+        Using the Mixture of Generalized Hyperbolic Distributions
+Version: 1.2
+Date: 2014-12-10
 Author: Cristina Tortora, Ryan P. Browne, Brian C. Franczak and Paul D. McNicholas.
 Maintainer: Cristina Tortora <ctortora@math.mcmaster.ca>
-Description: Carries out model-based clustering, classification and discriminant analysis using four different models. The models are all based on the  generalized hyperbolic distribution.The first model MGHD is the classical mixture of generalized hyperbolic distributions. The MGHFA is the mixture of generalized hyperbolic factor analyzers for high dimensional data sets. The MSGHD, mixture of  multiple scaled generalized hyperbolic distributions. The MCGHD, mixture of  coalesced generalized hyperbolic distributions is a new more flexible model.
+Description: Carries out model-based clustering, classification and discriminant analysis using five different models. The models are all based on the  generalized hyperbolic distribution.The first model MGHD is the classical mixture of generalized hyperbolic distributions. The MGHFA is the mixture of generalized hyperbolic factor analyzers for high dimensional data sets. The MSGHD, mixture of  multiple scaled generalized hyperbolic distributions. The cMSGHD is a MSGHD with convex contour plots. The MCGHD, mixture of  coalesced generalized hyperbolic distributions is a new more flexible model.
 Imports: Bessel, stats, mvtnorm, ghyp, numDeriv
 Depends: MASS, mclust, R (>= 3.1.1)
 NeedsCompilation: no
 License: GPL (>= 2)
-Packaged: 2014-10-22 19:23:38 UTC; cristina
+Packaged: 2014-12-10 17:06:07 UTC; ctortora
 Repository: CRAN
-Date/Publication: 2014-10-22 23:09:04
+Date/Publication: 2014-12-10 21:13:49
