--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,5 @@ import(ghyp)
 import(numDeriv)
 import(MASS)
 import(mclust)
+import(mixture)
 export(MCGHD, MGHD, MGHFA, MSGHD,cMSGHD, DA, Selection)
