--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,6 @@ import(mvtnorm)
 import(ghyp)
 import(numDeriv)
 import(MASS)
-import(mclust)
+import(e1071)
 import(mixture)
-export(MCGHD, MGHD, MGHFA, MSGHD,cMSGHD, DA, Selection)
+export(MCGHD, MGHD, MGHFA, MSGHD,cMSGHD, DA, Selection,ARI)
