--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ import(numDeriv)
 import(MASS)
 import(e1071)
 import(mixture)
-export(MCGHD, MGHD, MGHFA, MSGHD,cMSGHD, DA, Selection,ARI)
+import(cluster)
+export(MCGHD, MGHD, MGHFA, MSGHD,cMSGHD, DA,ARI)
